added name property =url to form input

--- a/web/index.html
+++ b/web/index.html
@@ -3,8 +3,8 @@
   <title></title>
 </head>
 <body>
-  <form action='/' method='POST'>
-    <input type='text' placeholder='Enter URL to Archive'></input>
+  <form action='/' method='post'>
+    <input type='text' placeholder='Enter URL to Archive' name="url"></input>
     <input type="submit"></input>
   </form>
 </body>
